--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "sqlite3": "^5.1.7"
   }
 }
